--- a/css/Home.css
+++ b/css/Home.css
@@ -7,10 +7,7 @@
 /* CUSTOM HOME PAGE CSS */
 /* header */
 /* hero */
-
-/* Nesu tikras del sitos sekcijos pavadino jei kam kils minciu geresniam pavadinimui duokit zinoti pakeisiu. */
-/* Power Your Creativity */
-
+/* introduction */
 /* resume */
 /* achievements */
 /* services */
