--- a/css/components/reset.css
+++ b/css/components/reset.css
@@ -7,3 +7,8 @@ body * {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   word-break: break-all;
 }
+
+main {
+  display: inline-block;
+  width: 100%;
+}
