CSS imported to Home.css

--- a/css/Home.css
+++ b/css/Home.css
@@ -3,6 +3,7 @@
 @import './components/variables.css';
 @import './components/layout.css';
 @import './components/utility.css';
+@import './custom.css';
 /* 3rd party */
 /* components */
 
