--- a/css/Home.css
+++ b/css/Home.css
@@ -5,11 +5,15 @@
 @import './components/utility.css';
 @import './custom.css';
 /* 3rd party */
+@import './font-awesome.min.css';
+
 /* components */
 
 /* CUSTOM HOME PAGE CSS */
 /* header */
 /* hero */
+@import './components/button-hero.css';
+
 /* introduction */
 /* resume */
 /* achievements */
