--- a/css/components/layout.css
+++ b/css/components/layout.css
@@ -42,7 +42,7 @@
 .container > .row > [class*='col-'],
 .container-fluid > .row > [class*='col-'] {
   float: left;
-  /* background-color: pink; */
+  background-color: pink;
   margin: var(--row-gap) var(--half-gap);
 }
 
