--- a/css/Home.css
+++ b/css/Home.css
@@ -54,6 +54,63 @@
 /* clients */
 /* how we works */
 /* blog */
+.blog {
+  background-color: white;
+}
+
+.blogheader {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  font-size: 26px;
+  text-transform: capitalize;
+}
+
+.blog > h2 {
+  margin-top: 50px;
+  font-size: 24px;
+  line-height: 32px;
+  padding: 20px;
+}
+
+.blog > p {
+  margin-top: 20px;
+  line-height: 24px;
+  padding: 20px;
+}
+
+.blog > img {
+  width: 100%;
+}
+
+.blog > button {
+  display: inline-block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  width: 160px;
+  padding: 10px 20px;
+  background-color: lightgreen;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  border-radius: 20px;
+  border-style: none;
+}
+
+.icblog {
+  display: inline-block;
+  margin-top: 8px;
+  margin-left: 20px;
+  color: blue;
+}
+
+.ictext {
+  display: inline-block;
+  margin-top: 8px;
+  margin-left: 8px;
+}
+
 /* contact us */
 @media (min-width: 320px) {
   input,
