--- a/css/custom.css
+++ b/css/custom.css
@@ -217,6 +217,52 @@ nav a:hover {
 }
 /* resume */
 /* achievements */
+section .achievements-container {
+  background-color: blueviolet;
+}
+.achievements {
+  background-color: var(--main-color);
+  background-image: linear-gradient( #0AC777, var(--main-color));
+  padding: 30px;
+  margin: 0;
+}
+.img-blob > img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+}
+.img-blob {
+width: 100%;
+}
+.achievement-block {
+  position: relative;
+  width: 100%;
+}
+.achievement-text {
+  position: absolute;
+  width: 100%;
+  top: 30%;
+  text-align: center;
+  color: #fff;
+}
+.achievement-text > .number-count {
+  font-size: 30px;
+  font-weight: bold;
+}
+.achievement-text > .number-count::after{
+  content: "+";
+  display: inline-block;
+  margin-left: -5px;
+}
+.achievement-text h4 {
+  text-transform: capitalize;
+  padding-top: 5px;
+  font-size: 15px;
+
+}
+
+
 /* services */
 /* latest projects */
 /* subscribe */
