--- a/css/custom.css
+++ b/css/custom.css
@@ -217,12 +217,12 @@ nav a:hover {
 }
 /* resume */
 /* achievements */
-section .achievements-container {
+.achievements-container {
   background-color: blueviolet;
 }
 .achievements {
   background-color: var(--main-color);
-  background-image: linear-gradient( #0AC777, var(--main-color));
+  /* background-image: linear-gradient( #0AC777, var(--main-color)); */
   padding: 30px;
   margin: 0;
 }
