--- a/css/custom.css
+++ b/css/custom.css
@@ -218,12 +218,14 @@ nav a:hover {
 /* resume */
 /* achievements */
 .achievements-container {
-  background-color: blueviolet;
+  background-color: var(--main-color);
+  background-image: linear-gradient( #0AC777, var(--main-color));
+  padding: 0;
+  margin: 0;
 }
 .achievements {
-  background-color: var(--main-color);
-  /* background-image: linear-gradient( #0AC777, var(--main-color)); */
-  padding: 30px;
+  width: 100%;
+  padding: 50px 0;
   margin: 0;
 }
 .img-blob > img {
@@ -253,14 +255,44 @@ width: 100%;
 .achievement-text > .number-count::after{
   content: "+";
   display: inline-block;
-  margin-left: -5px;
+  margin-left: 5px;
 }
 .achievement-text h4 {
   text-transform: capitalize;
   padding-top: 5px;
   font-size: 15px;
-
 }
+@media (min-width: 768px) {
+  .achievements {
+  padding: 30px 0;
+}
+
+.achievement-text > .number-count {
+  font-size: 36px;
+}
+.achievement-text > .number-count::after{
+  margin-left: 5px;
+}
+.achievement-text h4 {
+  font-size: 18px;
+}
+}
+@media (min-width: 992px) {
+  .achievements {
+  padding: 20px;
+}
+}
+@media (min-width: 1200px) {
+  .achievements {
+  padding: 15px;
+}
+}
+@media (min-width: 1500px) {
+  .achievements {
+  padding: 0;
+}
+}
+
 
 
 /* services */
