--- a/css/Home.css
+++ b/css/Home.css
@@ -14,6 +14,7 @@
 /* resume */
 /* achievements */
 /* services */
+@import './components/services.css';
 /* latest projects */
 /* subscribe */
 /* clients */
