--- a/css/Home.css
+++ b/css/Home.css
@@ -16,7 +16,9 @@
   padding-top: 0;
 }
 .header-hero {
-  background-color: var(--main-color);
+  /* background-color: var(--main-color); */
+  background-image: url(../img/heroBackground.jpg);
+  background-size: cover;
   color: #fff;
   padding-bottom: 0;
 }
