--- a/css/Home.css
+++ b/css/Home.css
@@ -15,6 +15,8 @@
 @import './components/button-hero.css';
 
 /* introduction */
+@import './components/introduction.css';
+
 @media (min-width: 576px) {
   .column {
     float: left;
