--- a/css/Home.css
+++ b/css/Home.css
@@ -12,54 +12,52 @@
 
 /* CUSTOM HOME PAGE CSS */
 /* header */
-.header-hero {
+header.header {
+  position: absolute;
   padding-top: 0;
-}
-.header-hero {
-  /* background-color: var(--main-color); */
-  background-image: url(../img/heroBackground.jpg);
-  background-size: cover;
-  color: #fff;
-  padding-bottom: 0;
+  margin-top: 0;
+  top: 0;
+  z-index: 1;
+  position: absolute;
 }
 .header-top-row {
-  padding: 0;
   border-bottom: solid 0.2px #028de8;
   font-size: 16px;
   color: #fff;
-  line-height: 32px;
-  height: 42px;
+  line-height: 26px;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
 }
-.header-top-row .icon {
-  padding-top: 7px;
-}
-.header-top-row .contacts {
-float: left;
-}
-.header-top-row .contacts > a{
-float: left;
+.header-bottom-row {
+  font-size: 16px;
+  color: #fff;
+  line-height: 26px;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
 }
 .header-top-row .contact {
-  padding: 0 12px;
+  padding-right: 15px;
   color: #fff;
   text-decoration: none;
   transition: all 0.4s; 
 }
+.header-top-row .contacts > .icon {
+  padding-top: 5px;
+  margin-right: 5px;
+}
+.header-top-row .socials {
+  float: left;
+  padding: 0;
+  margin: 0;
+  transition: all 0.4s;
+  text-align: right;
+}
 .header-top-row .socials > a {
   color: #fff;
   margin: 0 8px;
-  line-height: 36px;
+  line-height: 26px;
   font-size: 16px;
   text-decoration: none;
-}
-.header-top-row .socials {
-  line-height: 48px;
-  float: right;
-  transition: all 0.4s;
-}
-.header-bottom-row {
-  height: 58px;
-  margin: 15px;
 }
 .header-top-row .socials > a:hover {
   opacity: 0.6;
@@ -86,11 +84,19 @@ nav {
 nav a:hover {
   opacity: 0.6;
 }
+
 /* hero */
-.hero-main-section {
+.hero {
+  background-color: var(--main-color);
+  background-image: url(../img/heroBackground.jpg);
+  background-size: cover;
+  color: #fff;
+  padding-top: 100px;
   position: relative;
-  padding: 0 0 50px;
-}
+  }
+  .hero-left-section {
+    padding-top:10px;
+  }
 .hero-left-section h1 {
   word-break: keep-all;
   font-size: 24px;
@@ -102,37 +108,26 @@ nav a:hover {
   font-size: 16px;
   word-break: keep-all;
 }
-.hero-left-section {
-  float: left;
-}
-.hero-right-section{
-  bottom: 0;
-  float: left;
-  height: 300px;
-  padding: 0;
-  position: absolute;
-}
-.moving-robot >img {
-  height:70%;
-  position: absolute;
-  bottom: 60px;
-  left: 0px;
+.moving-robot > img{
+  width: 100%;
   animation-name: robotMove;
-  animation-duration: 3s;
+  animation-duration: 2.5s;
+  animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
-  animation-delay: 2s;
+  animation-delay: 1s;
+  bottom: 0px;
 }
-.mechanics > img {
-  height:50%;
-  position: absolute;
-  right: 0;
-  bottom: 60px;
+.mechanics > img{
+  max-width: 100%;
+  height: auto;
+  padding-top: 40px;
 }
+
 @keyframes robotMove {
   0% {
   }
   50% {
-    bottom: 90px;
+    bottom: 30px;
   }
 }
 @media (min-width: 576px) {
@@ -141,11 +136,11 @@ nav a:hover {
   }
 }
 @media (min-width: 768px) {
+  .hero {
+    padding-top: 150px;
+  }
   .hero-main-section h1 {
     font-size: 36px;
-  }
-  .hero-main-section {
-    padding-top: 60px;
   }
   .hero-left-section p {
     font-size: 18px;
@@ -154,11 +149,12 @@ nav a:hover {
     padding: 6px 25px;
     font-size: 16px;
     line-height: 32px;
-}
-
-
+} 
 }
 @media (min-width: 992px) {
+  .hero {
+    padding-top: 150px;
+  }
   .hero-left-section h1 {
     font-size: 42px;
   }
@@ -167,17 +163,8 @@ nav a:hover {
     padding-top: 20px;
     padding-bottom: 30px;
   }
-  .hero-main-section {
-    padding-top: 90px;
-  }
   .hero-left-section {
     margin-bottom: 90px;
-  }
-  .moving-robot > img{
-  height: 110%;
-  }
-  .mechanics > img{
-  height: 80%;
   }
   .btn {
   padding: 6px 30px;
@@ -186,11 +173,8 @@ nav a:hover {
 }
 }
 @media (min-width: 1200px) {
-  .hero-main-section {
-  padding-bottom: 200px;
-  }
-    .hero-right-section {
-  bottom: 130px;
+  .hero {
+  padding-top: 220px;
   }
   .hero-left-section h1 {
     font-size: 46px;
@@ -199,36 +183,32 @@ nav a:hover {
   .hero-left-section p {
   font-size: 26px;
   }
-  .moving-robot > img{
-  height: 150%;
-  bottom: 0;
-  }
-  .mechanics > img{
-  height: 100%;
-  bottom: 0;
-  }
-  @keyframes robotMove {
-  0% {
-  }
-  50% {
-    bottom: 30px;
-  }
-  }
+    .mechanics > img{
+  padding-top: 160px;
+}
+.moving-robot > img{
+width: 110%;
+}
 }
 @media (min-width: 1500px) {
-  .hero-main-section {
-  padding-bottom: 300px;
+  .hero {
+  padding-top: 220px;
   }
 .hero-left-section h1 {
     font-size: 60px;
   }
-  .moving-robot > img{
-  height: 190%;
+    .hero-left-section {
+    padding-top:30px;
   }
   .mechanics > img{
-  height: 140%;
-  }
+  padding-top: 150px;
 }
+  .moving-robot > img{
+  width: 110%;
+}
+
+
+} 
 
 /* introduction */
 @media (min-width: 576px) {
