--- a/css/components/reset.css
+++ b/css/components/reset.css
@@ -6,6 +6,7 @@ body * {
   box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   word-break: break-all;
+  position: relative;
 }
 
 main {
