--- a/css/Home.css
+++ b/css/Home.css
@@ -432,8 +432,6 @@ nav a:hover {
   }
   .container > .row > div > .mail-img {
     width: 70%;
-    margin-left: auto;
-    margin-bottom: auto;
   }
 }
 @media (min-width: 576px) {
@@ -476,6 +474,8 @@ nav a:hover {
 }
 .subscribe-btn:hover {
   cursor: pointer;
+  opacity: 0.6;
+  transition: 1s;
 }
 .fa-location-arrow {
   color: #fff;
