--- a/css/Home.css
+++ b/css/Home.css
@@ -405,13 +405,29 @@ nav a:hover {
 }
 
 /* subscribe */
-
+.container.position {
+  margin-top: 150px;
+}
+.mail {
+  background: var(--mail-color);
+  height: 422px;
+  position: absolute;
+  top: 0;
+  transform: translateY(-40%);
+  box-shadow: 3px 3px 100px 3px rgba(228, 218, 218, 0.6);
+  border: 1px solid var(--mail-color);
+  border-radius: 10px;
+}
 .mail-img {
+  display: inline-block;
   width: 100%;
-  max-height: 322px;
+  height: 322px;
   object-fit: contain;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 .flex-box {
+  height: 90%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -478,13 +494,12 @@ nav a:hover {
 }
 
 /* clients */
-.container > .row.margin {
+.container > .row.clients-row {
   margin-top: 200px;
   margin-bottom: 0;
 }
 .container > .row > .clients-logo {
-  margin-top: 0;
-  margin-bottom: 0;
+  display: inline-block;
   height: 40px;
   object-fit: contain;
 }
