--- a/css/Home.css
+++ b/css/Home.css
@@ -9,6 +9,7 @@
 
 /* components */
 @import './components/button.css';
+@import './components/introduction.css';
 
 /* CUSTOM HOME PAGE CSS */
 /* header */
