--- a/css/Home.css
+++ b/css/Home.css
@@ -405,53 +405,105 @@ nav a:hover {
 }
 
 /* subscribe */
-.container.position {
-  margin-top: 150px;
-}
-.mail {
+
+.container > .row.mail {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 60px;
   background: var(--mail-color);
-  height: 422px;
-  position: absolute;
-  top: 0;
-  transform: translateY(-40%);
-  box-shadow: 3px 3px 100px 3px rgba(228, 218, 218, 0.6);
+  box-shadow: 0px 0px 100px 0px rgba(228, 218, 218, 0.6);
   border: 1px solid var(--mail-color);
   border-radius: 10px;
 }
+
 .mail-img {
-  display: inline-block;
-  width: 100%;
-  height: 322px;
+  margin-top: 30px;
+  width: 50%;
   object-fit: contain;
-  margin-top: 50px;
-  margin-bottom: 50px;
 }
-.flex-box {
-  height: 90%;
+.container > .row > .form-flex {
+  flex: 1;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 .h2-form {
   text-transform: capitalize;
-  font-size: 40px;
-  line-height: 55px;
-  margin: 40px 0;
+  font-size: 22px;
+  line-height: 35px;
+  margin: 20px 0;
+  position: relative;
+  z-index: 1;
+}
+.h2-form::after {
+  content: '';
+  display: inline-block;
+  width: 150px;
+  height: 10px;
+  background: rgb(1, 160, 249);
+  background: linear-gradient(
+    90deg,
+    rgba(1, 160, 249, 1) 0%,
+    rgba(9, 199, 120, 1) 80%
+  );
+  position: absolute;
+  bottom: 57%;
+  left: 0;
+  z-index: -1;
 }
 @media (min-width: 320px) {
-  .h2-form,
-  .center {
-    text-align: center;
+  .mail-img {
+    width: 30%;
   }
-  .container > .row > div > .mail-img {
-    width: 70%;
-  }
-}
-@media (min-width: 576px) {
   .h2-form {
-    text-align: left;
+    width: 240px;
   }
 }
+@media (min-width: 992px) {
+  .container > .row.mail {
+    flex-direction: row;
+  }
+  .mail-img {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .h2-form {
+    width: 300px;
+    font-size: 30px;
+    line-height: 50px;
+  }
+  .container.position {
+    margin-top: 150px;
+  }
+  .container > .row.mail {
+    width: 930px;
+    margin: var(--row-gap) calc(50% - 465px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateY(-40%);
+  }
+  .container.position {
+    position: relative;
+  }
+}
+@media (min-width: 1200px) {
+  .container > .row.mail {
+    width: 1100px;
+    margin: var(--row-gap) calc(50% - 550px);
+  }
+  .mail-img {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+}
+@media (min-width: 1500px) {
+  .container > .row.mail {
+    width: 1390px;
+    margin: var(--row-gap) calc(50% - 695px);
+  }
+}
+
 .position {
   width: 100%;
   position: relative;
@@ -494,10 +546,13 @@ nav a:hover {
 }
 
 /* clients */
-.container > .row.clients-row {
-  margin-top: 200px;
-  margin-bottom: 0;
+@media (min-width: 992px) {
+  .container > .row.clients-row {
+    margin-top: 200px;
+    margin-bottom: 0;
+  }
 }
+
 .container > .row > .clients-logo {
   display: inline-block;
   height: 40px;
@@ -506,6 +561,9 @@ nav a:hover {
 .clients-background {
   background-image: url(../img/clients-logo/clients-background.png);
   background-size: cover;
+  background-position: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 /* how we works */
 /* blog */
