--- a/css/Home.css
+++ b/css/Home.css
@@ -9,82 +9,10 @@
 
 /* components */
 @import './components/button.css';
+@import './components/header.css';
 
 /* CUSTOM HOME PAGE CSS */
 /* header */
-header.header {
-  position: absolute;
-  padding-top: 0;
-  margin-top: 0;
-  top: 0;
-  z-index: 1;
-  position: absolute;
-}
-.header .header-top-row {
-  border-bottom: solid 0.2px #028de8;
-  font-size: 16px;
-  color: #fff;
-  line-height: 26px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-.header .header-bottom-row {
-  font-size: 16px;
-  color: #fff;
-  line-height: 26px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-.header-top-row .contact {
-  padding-right: 15px;
-  color: #fff;
-  text-decoration: none;
-  transition: all 0.4s;
-}
-.header-top-row .contacts > .icon {
-  padding-top: 5px;
-  margin-right: 5px;
-}
-.header-top-row .socials {
-  float: left;
-  padding: 0;
-  margin: 0;
-  transition: all 0.4s;
-  text-align: right;
-}
-.header-top-row .socials > a {
-  color: #fff;
-  margin: 0 8px;
-  line-height: 26px;
-  font-size: 16px;
-  text-decoration: none;
-}
-.header-top-row .socials > a:hover {
-  opacity: 0.6;
-}
-.header .contact:hover {
-  opacity: 0.6;
-}
-nav {
-  float: right;
-}
-.nav > a {
-  float: left;
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
-  line-height: 20px;
-  font-size: 16px;
-  padding: 5px 14px;
-  transition: all 0.4s;
-}
-.nav > a:first-of-type {
-  opacity: 0.6;
-}
-nav a:hover {
-  opacity: 0.6;
-}
-
 /* hero */
 .hero {
   background-color: var(--main-color);
