--- a/font/flaticon.css
+++ b/font/flaticon.css
@@ -1,36 +1,45 @@
-	/*
+/*
   	Flaticon icon font: Flaticon
   	Creation date: 27/02/2021 12:37
   	*/
 
 @font-face {
-  font-family: "Flaticon";
-  src: url("./Flaticon.eot");
-  src: url("./Flaticon.eot?#iefix") format("embedded-opentype"),
-       url("./Flaticon.woff2") format("woff2"),
-       url("./Flaticon.woff") format("woff"),
-       url("./Flaticon.ttf") format("truetype"),
-       url("./Flaticon.svg#Flaticon") format("svg");
+  font-family: 'Flaticon';
+  src: url('./Flaticon.eot');
+  src: url('./Flaticon.eot?#iefix') format('embedded-opentype'),
+    url('./Flaticon.woff2') format('woff2'),
+    url('./Flaticon.woff') format('woff'),
+    url('./Flaticon.ttf') format('truetype'),
+    url('./Flaticon.svg#Flaticon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) {
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
-    font-family: "Flaticon";
-    src: url("./Flaticon.svg#Flaticon") format("svg");
+    font-family: 'Flaticon';
+    src: url('./Flaticon.svg#Flaticon') format('svg');
   }
 }
 
-[class^="flaticon-"]:before, [class*=" flaticon-"]:before,
-[class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
+[class^='flaticon-']:before,
+[class*=' flaticon-']:before,
+[class^='flaticon-']:after,
+[class*=' flaticon-']:after {
   font-family: Flaticon;
-        font-size: 20px;
-font-style: normal;
-margin-left: 20px;
+  font-size: 60px;
+  font-style: normal;
 }
 
-.flaticon-chip:before { content: "\f100"; }
-.flaticon-artificial-intelligence:before { content: "\f101"; }
-.flaticon-artificial-intelligence-1:before { content: "\f102"; }
-.flaticon-robotic-arm:before { content: "\f103"; }
+.flaticon-chip:before {
+  content: '\f100';
+}
+.flaticon-artificial-intelligence:before {
+  content: '\f101';
+}
+.flaticon-artificial-intelligence-1:before {
+  content: '\f102';
+}
+.flaticon-robotic-arm:before {
+  content: '\f103';
+}
